RESOLVED FIXED282873
[JSC] Fix Linux build error after 286359@main
https://bugs.webkit.org/show_bug.cgi?id=282873
Summary [JSC] Fix Linux build error after 286359@main
Sosuke Suzuki
Reported 2024-11-08 23:37:12 PST
/home/sosukesuzuki/ghq/github.com/WebKit/WebKit/Source/JavaScriptCore/runtime/Options.cpp:422:62: error: 'name' is an unsafe pointer used for buffer access [-Werror,-Wunsafe-buffer-usage] 422 | bool Options::overrideAliasedOptionWithHeuristic(const char* name) | ~~~~~~~~~~~~^~~~ /home/sosukesuzuki/ghq/github.com/WebKit/WebKit/Source/JavaScriptCore/runtime/Options.cpp:428:43: note: used in buffer access here 428 | auto aliasedOption = makeString(span(&name[4]), '=', span(stringValue)); | ^~~~ 1 error generated.
Attachments
Sosuke Suzuki
Comment 1 2024-11-08 23:42:26 PST
EWS
Comment 2 2024-11-09 09:47:17 PST
Committed 286382@main (968ecacbe1cc): <https://commits.webkit.org/286382@main> Reviewed commits have been landed. Closing PR #36435 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-11-09 09:48:13 PST
Note You need to log in before you can comment on or make changes to this bug.