[JSC] Fix Linux build error after 286359@main https://bugs.webkit.org/show_bug.cgi?id=282873

Reviewed by Yusuke Suzuki.

Building the latest WebKit with Linux clang++ results in the following error,
likely due to 286359@main:

    /WebKit/WebKit/Source/JavaScriptCore/runtime/Options.cpp:422:62: error: 'name' is an unsafe pointer used for buffer access [-Werror,-Wunsafe-buffer-usage]
      422 | bool Options::overrideAliasedOptionWithHeuristic(const char* name)
          |                                                  ~~~~~~~~~~~~^~~~
    /home/sosukesuzuki/ghq/github.com/WebKit/WebKit/Source/JavaScriptCore/runtime/Options.cpp:428:43: note: used in buffer access here
      428 |     auto aliasedOption = makeString(span(&name[4]), '=', span(stringValue));
          |                                           ^~~~
    1 error generated.

This patch fixes this error.

    * Source/JavaScriptCore/runtime/Options.cpp:

Canonical link: https://commits.webkit.org/286382@main